fix layout issues

--- a/app/assets/stylesheets/catalog.scss
+++ b/app/assets/stylesheets/catalog.scss
@@ -3,7 +3,7 @@
 	.products {
 
 		.product-teaser {
-			text-align: center;
+			/* text-align: center; */
 		}
 
 		a {
